@@ -1,5 +1,6 @@
 Revision history for HTML::StateTable
 
+          - Position prefernces dialog with gravity towards page centre
           - CSS done for now
           - Refactored more CSS
           - More CSS refactoring
